[package]
name = "eth-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
actix-web = "4.9.0"
reqwest = { version = "0.12.9", features = ["json"] }
env_logger = "0.11.6"
log = "0.4.26"
clap = { version = "4.5.3", features = ["derive", "env"] }

[lib]
path = "app/lib.rs"

[[bin]]
name = "eth-proxy"
path = "app/server.rs"
